--- a/Maya - Multi-User Todo Application/public/home/home.html
+++ b/Maya - Multi-User Todo Application/public/home/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
     <script src="./dist/home.js" defer></script>
-    <link rel="stylesheet" href="./dist/pets.css">
+    <link rel="stylesheet" href="./dist/home.css">
 </head>
 <body>
     <h1>Home - Todo list</h1>
