--- a/Maya - Multi-User Todo Application/public/home/home.html
+++ b/Maya - Multi-User Todo Application/public/home/home.html
@@ -10,5 +10,19 @@
 <body>
     <h1>Home - Todo list</h1>
     <div id="userName"></div>
+    <div class="create-post">
+        <h2>Create a New Todo</h2>
+        <form id="newTodoForm">
+            <input type="text" id="title" placeholder="title" required>
+            <input type="text" id="description" placeholder="description" required>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+
+    <div class="todo-section">
+        <h2>All Todo</h2>
+        <div id="todosContainer"></div>
+    </div>
+</div>
 </body>
 </html>
